# igraph-scg

./: .gitignore  CMakeLists.txt  README.md
etc/cmake/: compilers.cmake  packaging.cmake  summary.cmake  test_helpers.cmake  version.cmake
include/: igraph_scg.h
src/: CMakeLists.txt  scg.c  scg_approximate_methods.c  scg_exact_scg.c  scg_headers.h  scg_kmeans.c  scg_optimal_method.c  scg_utils.c
tests/: CMakeLists.txt
tests/unit/: igraph_scg_grouping.c  igraph_scg_grouping.out  igraph_scg_grouping2.c  igraph_scg_grouping3.c  igraph_scg_grouping4.c  igraph_scg_semiprojectors.c  igraph_scg_semiprojectors.out  igraph_scg_semiprojectors2.c  igraph_scg_semiprojectors2.out  igraph_scg_semiprojectors3.c  igraph_scg_semiprojectors3.out  scg.c  scg.out  scg2.c  scg3.c  test_utilities.inc
